Fix snap fling by tap and unable to scroll for new page on Windows touchpad

The user reported 2 issues in this issue:

1. should stop fling when user tap on touchpad when fling
2. not able to scroll when user click on link to load a slow page then scroll

The first issue is caused by we don't setup the real window size for viewport.
The second issue is caused by we don't stop the viewport before activate
or deactivate the window that may turns the direct manipulation to a unknown
state and stop sending events to chrome.

Bug: 847611
Change-Id: I646caf9aa70460741cedc1fea7804d8afe14d437
Reviewed-on: https://chromium-review.googlesource.com/1079460
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Jianpeng Chao <chaopeng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563247}
Former-commit-id: 1c01a8d4e41312e1a7c0c7d7e67d6d65f8d86f1a